// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> renders and matches the snapshot 1`] = `
<span
  className="p-text--default"
>
  <i
    className="p-icon--spinner u-animation--spin"
  />
</span>
`;

exports[`<Spinner /> renders and matches the snapshot with text 1`] = `
<span
  className="p-text--default"
>
  <i
    className="p-icon--spinner u-animation--spin"
  />
   
  <span>
    foo
  </span>
</span>
`;
